--- a/labs/lab04/report/Makefile
+++ b/labs/lab04/report/Makefile
@@ -16,7 +16,7 @@ FORMAT_OPTIONS =
 ## Use pandoc-crossref (https://github.com/lierdakil/pandoc-crossref)
 FILTERS += --filter pandoc-crossref
 ###
-PDF_ENGINE += --pdf-engine=xelatex --pdf-engine-opt=--shell-escape
+PDF_ENGINE += --pdf-engine=lualatex --pdf-engine-opt=--shell-escape
 OPTIONS += --number-sections
 BIB_OPTIONS = --citeproc
 
@@ -34,3 +34,4 @@ clean:
 	-rm $(FILES) *~
 
 cleanall: clean
+
